[gd_scene load_steps=31 format=3 uid="uid://bkd45842mwucg"]

[ext_resource type="Script" path="res://Player/Scripts/Player.gd" id="1_8jisa"]
[ext_resource type="PackedScene" uid="uid://cfrhe4fqy3rbp" path="res://Player/Escenas/dash.tscn" id="2_fb4lv"]
[ext_resource type="Texture2D" uid="uid://e8eaht75wwl8" path="res://Assets/New_player/GatoPeque√±o.png" id="2_vdbn0"]
[ext_resource type="PackedScene" uid="uid://cn5spaa1ntxby" path="res://Componentes/state_machine.tscn" id="6_soeu2"]
[ext_resource type="Script" path="res://Player/Scripts/PlayerIdle.gd" id="9_c0tqk"]
[ext_resource type="PackedScene" uid="uid://cokj7sefj7wkx" path="res://Componentes/Entidades/vida_componente.tscn" id="10_eneoy"]
[ext_resource type="Script" path="res://Player/Scripts/PlayerMovement.gd" id="10_wxkak"]
[ext_resource type="PackedScene" uid="uid://cf50734basigr" path="res://Componentes/Entidades/dead_state.tscn" id="11_51ldr"]
[ext_resource type="PackedScene" uid="uid://bv7eo77rlfpxt" path="res://Componentes/Entidades/hitbox_componente.tscn" id="11_cvibm"]
[ext_resource type="Script" path="res://Player/Scripts/PlayerAttack.gd" id="11_egx8t"]
[ext_resource type="Script" path="res://Player/Scripts/PlayerParry.gd" id="12_cf2s3"]
[ext_resource type="Script" path="res://Player/Scripts/PlayerProyectile.gd" id="12_hkbtk"]

[sub_resource type="Animation" id="Animation_skedq"]
resource_name = "Player_attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [11, 12, 13]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StateMachine/PlayerAttackClaw/AttackClawHitbox/AttackClawCollider:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_mylg7"]
resource_name = "Player_dash"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [5, 6, 7]
}

[sub_resource type="Animation" id="Animation_nvam2"]
resource_name = "Player_dead"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}

[sub_resource type="Animation" id="Animation_ngn6q"]
resource_name = "Player_hit"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [8, 9]
}

[sub_resource type="Animation" id="Animation_cf2ik"]
resource_name = "Player_idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [17]
}

[sub_resource type="Animation" id="Animation_hx6an"]
resource_name = "Player_jump"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [18, 19, 20, 21, 22]
}

[sub_resource type="Animation" id="Animation_cgkhc"]
resource_name = "Player_parry"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [23, 24, 25, 26, 27, 28]
}

[sub_resource type="Animation" id="Animation_srmls"]
resource_name = "Player_walk"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_irdfa"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StateMachine/PlayerAttackClaw/AttackClawHitbox/AttackClawCollider:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6dals"]
_data = {
"Player_attack": SubResource("Animation_skedq"),
"Player_dash": SubResource("Animation_mylg7"),
"Player_dead": SubResource("Animation_nvam2"),
"Player_hit": SubResource("Animation_ngn6q"),
"Player_idle": SubResource("Animation_cf2ik"),
"Player_jump": SubResource("Animation_hx6an"),
"Player_parry": SubResource("Animation_cgkhc"),
"Player_walk": SubResource("Animation_srmls"),
"RESET": SubResource("Animation_irdfa")
}

[sub_resource type="Animation" id="Animation_pqoat"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera2D:zoom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_66igc"]
resource_name = "zoom"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(10, 0), Vector2(10, 10), Vector2(0, 10)]
}

[sub_resource type="Animation" id="Animation_pc3l7"]
resource_name = "zoom"
length = 0.4
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.02, 1.02), Vector2(1.04, 1.04), Vector2(1.05, 1.05)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nm4iw"]
_data = {
"RESET": SubResource("Animation_pqoat"),
"agitar": SubResource("Animation_66igc"),
"zoom": SubResource("Animation_pc3l7")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n2j0g"]
size = Vector2(2.3, 1.9)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_78lfj"]
size = Vector2(15.3, 14.85)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xjy7y"]
size = Vector2(16.9, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c38kp"]
size = Vector2(4.8, 14.05)

[node name="Player" type="CharacterBody2D" groups=["Player"]]
position = Vector2(119, 46)
scale = Vector2(10, 10)
collision_layer = 3
script = ExtResource("1_8jisa")

[node name="PlayerSprites" type="Sprite2D" parent="."]
position = Vector2(-0.9, -1.5)
scale = Vector2(0.4875, 0.45)
texture = ExtResource("2_vdbn0")
hframes = 29

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6dals")
}

[node name="Camera2D" type="Camera2D" parent="."]
rotation = 1.05069
scale = Vector2(-331.085, 312.074)
limit_left = 0
limit_top = 0
limit_bottom = 720
limit_smoothed = true
position_smoothing_enabled = true
position_smoothing_speed = 3.0
rotation_smoothing_enabled = true
rotation_smoothing_speed = 3.0

[node name="AnimationCamera" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_nm4iw")
}

[node name="ColisionBackground" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="ColisionBackground"]
position = Vector2(-0.999999, -1.5)
shape = SubResource("RectangleShape2D_n2j0g")

[node name="VidaComponente" parent="." instance=ExtResource("10_eneoy")]
MAX_VIDA = 10000.0

[node name="HitboxComponente" parent="." node_paths=PackedStringArray("vida_componente") instance=ExtResource("11_cvibm")]
vida_componente = NodePath("../VidaComponente")

[node name="HitboxPlayer" type="CollisionShape2D" parent="HitboxComponente"]
position = Vector2(-0.6, -1.3)
shape = SubResource("RectangleShape2D_78lfj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1.05, -1.2)
shape = SubResource("RectangleShape2D_xjy7y")

[node name="StateMachine" parent="." node_paths=PackedStringArray("initial_state") instance=ExtResource("6_soeu2")]
initial_state = NodePath("PlayerIdle")

[node name="PlayerIdle" type="Node2D" parent="StateMachine" node_paths=PackedStringArray("PlayerAnimation", "PlayerSprite")]
script = ExtResource("9_c0tqk")
PlayerAnimation = NodePath("../../AnimationPlayer")
PlayerSprite = NodePath("../../PlayerSprites")

[node name="PlayerDash" parent="StateMachine" node_paths=PackedStringArray("AnimationPlay", "player_collider", "hitbox", "player") instance=ExtResource("2_fb4lv")]
AnimationPlay = NodePath("../../AnimationPlayer")
player_collider = NodePath("../../CollisionShape2D")
hitbox = NodePath("../../HitboxComponente/HitboxPlayer")
player = NodePath("../..")

[node name="PlayerMovement" type="Node2D" parent="StateMachine" node_paths=PackedStringArray("PlayerSprite", "AnimationPl")]
script = ExtResource("10_wxkak")
PlayerSprite = NodePath("../../PlayerSprites")
AnimationPl = NodePath("../../AnimationPlayer")
PlayerSpeed = 120.0
jump_height = 99.0
jump_time_peak = 0.5
jump_time_descent = 0.4

[node name="PlayerAttackClaw" type="Node2D" parent="StateMachine" node_paths=PackedStringArray("PlayerAnimation", "Player_sprite")]
script = ExtResource("11_egx8t")
PlayerAnimation = NodePath("../../AnimationPlayer")
Player_sprite = NodePath("../../PlayerSprites")

[node name="AttackClawHitbox" type="Area2D" parent="StateMachine/PlayerAttackClaw"]
collision_layer = 4
collision_mask = 4

[node name="AttackClawCollider" type="CollisionShape2D" parent="StateMachine/PlayerAttackClaw/AttackClawHitbox"]
position = Vector2(10.4, -1.1)
shape = SubResource("RectangleShape2D_c38kp")
disabled = true

[node name="AttackClawTimer" type="Timer" parent="StateMachine/PlayerAttackClaw"]
wait_time = 0.449
one_shot = true

[node name="DeadState" parent="StateMachine" node_paths=PackedStringArray("Machine") instance=ExtResource("11_51ldr")]
Machine = NodePath("..")

[node name="PlayerProyectile" type="Node2D" parent="StateMachine"]
script = ExtResource("12_hkbtk")

[node name="Bulletposition" type="Marker2D" parent="StateMachine/PlayerProyectile"]
position = Vector2(11.1, -0.8)

[node name="PlayerParry" type="Node2D" parent="StateMachine" node_paths=PackedStringArray("AnimationPlay", "player_collider", "hitbox", "player")]
script = ExtResource("12_cf2s3")
AnimationPlay = NodePath("../../AnimationPlayer")
player_collider = NodePath("../../CollisionShape2D")
hitbox = NodePath("../../HitboxComponente/HitboxPlayer")
player = NodePath("../..")

[node name="ParryTimer" type="Timer" parent="StateMachine/PlayerParry"]
one_shot = true

[node name="CoolDownTimer" type="Timer" parent="StateMachine/PlayerParry"]
one_shot = true

[connection signal="DeadPlayer" from="VidaComponente" to="StateMachine/DeadState" method="_on_vida_componente_dead_player"]
[connection signal="area_entered" from="StateMachine/PlayerAttackClaw/AttackClawHitbox" to="StateMachine/PlayerAttackClaw" method="_on_attack_claw_hitbox_area_entered"]
[connection signal="timeout" from="StateMachine/PlayerAttackClaw/AttackClawTimer" to="StateMachine/PlayerAttackClaw" method="_on_attack_claw_timer_timeout"]
[connection signal="timeout" from="StateMachine/PlayerParry/ParryTimer" to="StateMachine/PlayerParry" method="_on_parry_timer_timeout"]
